<?xml version="1.0"?>
<package format="3">
  <name>football_tracker</name>
  <version>0.0.0</version>
  <description>Detector de balón azul</description>
  <maintainer email="ricardo@example.com">ricardo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
